--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	   <div id="layout">
 		   <p>processing...</p>
 	   </div>
-	   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+	   <script src="socket.io.js"></script>
 	   <script type="text/javascript" src="client.js"></script>
 	</body>
 </html>
